results/SVCOMP/houdini/log-NullPointerException2-2024_03_19_00_25_22.txt
class A {
  //@ spec_public
  //@ invariant i < 1;
  //@ invariant i <= 1;
  //@ invariant i == 1;
  //@ invariant i != 1;
  //@ invariant i >= 1;
  //@ invariant i > 1;
  //@ invariant i < 0;
  //@ invariant i <= 0;
  //@ invariant i == 0;
  //@ invariant i != 0;
  //@ invariant i >= 0;
  //@ invariant i > 0;
  //@ invariant i < -1;
  //@ invariant i <= -1;
  //@ invariant i == -1;
  //@ invariant i != -1;
  //@ invariant i >= -1;
  //@ invariant i > -1;
  int i;
}

class NullPointerException2 {
  //@ ensures \result;
  //@ ensures !\result;
  public static boolean f() {
    A a = null;
    try {
      a.i = 0;
    } catch (NullPointerException exc) {
      return false;
    }
    return true;
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    f();
  }
}


/home/max/Documents/JMLGPT/tmp/NullPointerException2.java:2: error: This JML modifier is not allowed for a invariant clause
  //@ spec_public
      ^
1 error

class A {
  //@ invariant i < 1;
  //@ invariant i <= 1;
  //@ invariant i == 1;
  //@ invariant i != 1;
  //@ invariant i >= 1;
  //@ invariant i > 1;
  //@ invariant i < 0;
  //@ invariant i <= 0;
  //@ invariant i == 0;
  //@ invariant i != 0;
  //@ invariant i >= 0;
  //@ invariant i > 0;
  //@ invariant i < -1;
  //@ invariant i <= -1;
  //@ invariant i == -1;
  //@ invariant i != -1;
  //@ invariant i >= -1;
  //@ invariant i > -1;
  int i;
}

class NullPointerException2 {
  //@ ensures \result;
  //@ ensures !\result;
  public static boolean f() {
    A a = null;
    try {
      a.i = 0;
    } catch (NullPointerException exc) {
      return false;
    }
    return true;
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    f();
  }
}


OpenJML not responding. Aborted.
